--- a/MvcMovie/appsettings.json
+++ b/MvcMovie/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "MvcMovieContext": "Server=(localdb)\\mssqllocaldb;Database=MvcMovieContext-767578b8-ba66-4d47-ac85-8294cd5af478;Trusted_Connection=True;MultipleActiveResultSets=true"
+  }
 }
